# tourism-system-java

./: .gitignore  CLAUDE.md  DESIGN.md  FIX-PLAN-ROUTE-PLANNING.md  README.md  REDESIGN_SPEC.md  ROOT-CAUSE-FINAL.md  mvnw  mvnw.cmd  package-lock.json  pom.xml  requirements_summary_from_images.md  start-all.bat  start-all.ps1  stop-all.bat  stop-all.ps1
.claude/: settings.local.json
AGENT-PLAN/: DEEP_AGENT_ROADMAP.md  README.md
DEV-PLAN/: AGENT_SURROUNDING_PROPOSAL.md  CAMPUS_SURROUNDING_PLAN.md  DEV_LOG01.md  DEV_LOG02.md  DEV_LOG03.md  DEV_LOG04.md  DEV_LOG06.md  DEV_LOG07.md  DEV_LOG08.md  DEV_LOG09.md  DEV_LOG10.md  IMAGE_DUPLICATION_BUG_REPORT.md  REQUIREMENTS_API_TEST_MATRIX.md  SCENIC_SPOT_EXPANSION_PLAN.md  SURROUNDING_IMPLEMENTATION_REPORT.md  WRITE_DIARY_AI_OPTIMIZATION_PLAN.md
agent-service/: .env  .env.example  CUsers19374Desktopcodetourtourism-system-javaagent-servicet3.json  CUsers19374Desktopcodetourtourism-system-javaagent-servicetest_refresh_result.json  README.md  pyproject.toml  sdshow
config/: my.ini
docs/: AGENT_DESIGN.md  (+19 more)
tourism-system-java/agent-service/: .env.example  pyproject.toml
tourism-system-java/agent-service/app/: main.py  schemas.py
tourism-system-java/agent-service/app/agent/: __init__.py  diary_agent.py  orchestrator.py
tourism-system-java/agent-service/app/db/: sqlite_store.py
tourism-system-java/agent-service/app/tools/: image_diary.py  registry.py  tourism_api.py
tourism-system-java/agent-service/data/traces/: agent_trace.jsonl
tourism-system-java/agent-service/personalized_travel_agent.egg-info/: SOURCES.txt
(+645 files in other folders)
