[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-travel-agent"
version = "0.1.0"
description = "Minimal FastAPI agent service for the tourism system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "openai>=1.0.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
